// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Dataser should import file and open configure dataset step  1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-15"
  >
    <div
      class="MuiBox-root MuiBox-root-16 makeStyles-configureProjectDataBar-13"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
         Configure Dashboard Data :: Upload Dataset
      </h6>
    </div>
    <div
      class="MuiBox-root MuiBox-root-17 makeStyles-contentWrapper-14"
    >
      <div
        class="MuiBox-root MuiBox-root-18"
      >
        <div
          class="MuiPaper-root MuiStepper-root MuiStepper-horizontal MuiPaper-elevation0"
        >
          <div
            class="MuiStep-root MuiStep-horizontal MuiStep-completed"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-completed"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiStepLabel-completed MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Import Data
                </span>
              </span>
            </span>
          </div>
          <div
            class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-active"
          >
            <span
              class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
            />
          </div>
          <div
            class="MuiStep-root MuiStep-horizontal"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    class="MuiStepIcon-text"
                    text-anchor="middle"
                    x="12"
                    y="16"
                  >
                    2
                  </text>
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Configure Datatype
                </span>
              </span>
            </span>
          </div>
          <div
            class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
          >
            <span
              class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
            />
          </div>
          <div
            class="MuiStep-root MuiStep-horizontal"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    class="MuiStepIcon-text"
                    text-anchor="middle"
                    x="12"
                    y="16"
                  >
                    3
                  </text>
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Upload to Dashboard
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-19"
      >
        <div
          class="MuiBox-root MuiBox-root-25"
        >
           Configure Datatype Component
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload Dataser should match snapshot for upload dataset component 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-3"
  >
    <div
      class="MuiBox-root MuiBox-root-4 makeStyles-configureProjectDataBar-1"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
         Configure Dashboard Data :: Upload Dataset
      </h6>
    </div>
    <div
      class="MuiBox-root MuiBox-root-5 makeStyles-contentWrapper-2"
    >
      <div
        class="MuiBox-root MuiBox-root-6"
      >
        <div
          class="MuiPaper-root MuiStepper-root MuiStepper-horizontal MuiPaper-elevation0"
        >
          <div
            class="MuiStep-root MuiStep-horizontal"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root MuiStepIcon-active"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    class="MuiStepIcon-text"
                    text-anchor="middle"
                    x="12"
                    y="16"
                  >
                    1
                  </text>
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiStepLabel-active MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Import Data
                </span>
              </span>
            </span>
          </div>
          <div
            class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
          >
            <span
              class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
            />
          </div>
          <div
            class="MuiStep-root MuiStep-horizontal"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    class="MuiStepIcon-text"
                    text-anchor="middle"
                    x="12"
                    y="16"
                  >
                    2
                  </text>
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Configure Datatype
                </span>
              </span>
            </span>
          </div>
          <div
            class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
          >
            <span
              class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
            />
          </div>
          <div
            class="MuiStep-root MuiStep-horizontal"
          >
            <span
              class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
            >
              <span
                class="MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    class="MuiStepIcon-text"
                    text-anchor="middle"
                    x="12"
                    y="16"
                  >
                    3
                  </text>
                </svg>
              </span>
              <span
                class="MuiStepLabel-labelContainer"
              >
                <span
                  class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
                >
                  Upload to Dashboard
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-7"
      >
        <div
          class="MuiBox-root MuiBox-root-10 makeStyles-importDataContainer-8"
        >
          <img
            alt="Import File"
            src="importFileIcon.svg"
          />
          <div
            class="MuiBox-root MuiBox-root-11 makeStyles-textContainer-9"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              Drag your file here or 
            </p>
            <div
              class="MuiBox-root MuiBox-root-12"
            >
              <label
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Browse
                  <input
                    data-testid="file-input"
                    style="display: none;"
                    type="file"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
